--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@babel/preset-react": "^7.14.5",
     "cors": "^2.8.5",
     "dotenv": "16.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "morgan": "1.10.0",
+    "mysql3": "^0.6.0",
     "nodemon": "^2.0.19",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
